Fix for width on IOS devices.

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -284,3 +284,9 @@ a:hover, a:focus {
   background-color: rgba(0, 0, 0, 0.4);
   z-index: 9999;
 }
+
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  select:focus, textarea:focus, input:focus {
+    font-size: 16px;
+  }
+}
